fix the large footer img on mobile
- Make max height equal to that of it's container to prevent large width on 100

--- a/harmonix-client/src/pagelets-academy/5ToAudition/toaudition.css
+++ b/harmonix-client/src/pagelets-academy/5ToAudition/toaudition.css
@@ -77,6 +77,7 @@
 
 #left-footer-section img {
   height: 100%;
+  max-height: 140px;
   padding: 1.4rem 0rem;
   padding: 3rem 3rem 3rem 1rem;
   grid-column: 1 /3;
